[tool.poetry]
name = "field-boundary-detection"
version = "0.1.0"
description = ""
authors = ["Kinjuriu <stephanenjokingugi@gmail.com>"]
readme = "README.md"
packages = [{include = "field_boundary_detection"}]



[tool.poetry.dependencies]
python = ">=3.8,<3.12"
segmentation-models = {git = "https://github.com/qubvel/segmentation_models"}
tensorflow = "2.12.0"
radiant-mlhub = "0.5.5"
pandas = "1.5.3"
matplotlib = "3.7.1"
scikit-learn = "1.2.2"
numpy = ">=1.23.2"
rasterio = "1.3.6"
ipywidgets = "8.0.6"
h5py = "3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"